# Hackathon-2

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  phase-3.md  phase-4.md
.claude/commands/: sp.adr.md  sp.analyze.md  sp.clarify.md  (+7 more)
Phase-2/: .env.example  .gitignore  CLAUDE.md  DOCKER.md  QUICKSTART.md  README.Docker.md  docker-compose.yml  docker-stop.sh
Phase-2/backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml
Phase-2/backend/app/: main.py
Phase-2/backend/app/api/: dependencies.py  exception_handlers.py  middleware.py  rate_limit_middleware.py  security_middleware.py
Phase-2/backend/app/api/v1/: auth.py  health.py  tasks.py
Phase-2/backend/app/core/: auth.py  config.py  database.py  validation.py
Phase-2/backend/app/models/: task.py
Phase-2/backend/app/repositories/: task_repository.py
Phase-2/backend/app/services/: task_service.py
Phase-2/backend/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_error_handling.py  test_frontend_backend_integration.py  test_frontend_integration.py  test_health.py  test_tasks.py
Phase-3/backend/: .env.example  .gitignore  Dockerfile  README.md  create_auth_tables.py  deploy.sh  pyproject.toml  pytest.ini
Phase-3/backend/app/: main.py
Phase-3/backend/app/api/v1/: chat.py  health.py  tasks.py
Phase-3/backend/app/core/: auth.py  config.py  database.py
Phase-3/backend/app/mcp/: mcp_server.py
Phase-3/backend/app/mcp/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
Phase-3/backend/app/models/: conversation.py  message.py  task.py
Phase-3/backend/app/repositories/: conversation_repository.py  message_repository.py  task_repository.py
Phase-3/backend/app/schemas/: chat.py
Phase-3/backend/app/services/: chat_service.py  chatkit_adapter.py  guardrail.py
Phase-3/backend/tests/: conftest.py  test_chat.py  test_e2e.py  test_health.py  test_mcp_tools.py
todo-cli/: pyproject.toml  tasks.json
todo-cli/src/cli/: main.py
todo-cli/src/models/: task.py
todo-cli/src/services/: task_service.py
todo-cli/src/storage/: json_store.py
(+239 files in other folders)
